--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-application.args="/home/na/Downloads/Interview Exercise/data/input/items.dat" 50 200 phst phst.dat
+application.args="/home/na/Downloads/Interview Exercise/data/input/items.dat" 50 200 s s.dat
 compile.on.save=true
 do.depend=false
 do.jar=true
